--- a/css/styles.css
+++ b/css/styles.css
@@ -15,8 +15,6 @@
 }
 
 body {
-  /* font-family: "Alata", sans-serif;
-  font-family: "Josefin Sans", sans-serif; */
   font-size: 15px;
   overflow-x: hidden;
 }
@@ -33,10 +31,8 @@ li {
 .header {
   width: 100%;
   position: absolute;
-  top: 0;
   color: var(--white-accent);
-  padding: 4rem 0;
-  z-index: 100;
+  padding: 4rem 2rem;
   margin: 0 auto;
 }
 
@@ -48,11 +44,26 @@ li {
   justify-content: space-between;
 }
 
+.logo {
+  position: absolute;
+  z-index: 2;
+}
+
+.mobile-menu,
+.hamburger-container {
+  display: none;
+}
+
+.hamburger-container {
+  padding-right: 1.5rem;
+}
+
 .nav-links {
   display: flex;
   gap: 2rem;
   font-family: "Josefin Sans", sans-serif;
   font-size: 1.25rem;
+  z-index: 2;
 }
 
 .hero-container {
@@ -65,6 +76,15 @@ li {
   width: 100%;
   height: 100%;
   object-fit: cover;
+}
+
+.banner-overlay {
+  position: absolute;
+  left: 0;
+  top: 0;
+  background: rgba(0, 0, 0, 0.5);
+  width: 100%;
+  height: 100%;
 }
 
 .hero {
@@ -129,16 +149,19 @@ li {
 
 .creations-container {
   width: 100%;
-  height: 100vh;
   margin: 0 auto;
   display: flex;
   justify-content: center;
   align-content: center;
+  margin: 15vh auto;
+  padding: 0 2rem;
 }
 
 .creations-wrapper {
   max-width: 1440px;
   width: 100%;
+  display: flex;
+  justify-content: space-between;
 }
 
 .creations-title-container {
@@ -166,7 +189,259 @@ li {
   cursor: pointer;
 }
 
-.btn:hover {
+.mobile-btn {
+  display: none;
+}
+
+.btn:hover,
+.btn:active,
+.btn:focus {
   background: var(--black-accent);
   color: var(--white-accent);
+}
+
+.grid-container {
+  width: 100%;
+  margin: 0 auto;
+  margin-bottom: 20rem;
+  padding: 0 2rem;
+}
+
+.grid-list {
+  max-width: 1440px;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-gap: 2rem;
+  margin: 0 auto;
+}
+
+.grid-item {
+  position: relative;
+  cursor: pointer;
+}
+
+.overlay {
+  position: absolute;
+  left: 0;
+  top: 0;
+  background: rgba(0, 0, 0, 0.5);
+  width: 100%;
+  height: 100%;
+  transition: 0.4s ease-in-out;
+}
+
+.figcaption {
+  font-family: "Josefin Sans", sans-serif;
+  text-transform: uppercase;
+  font-size: 2.5rem;
+  font-weight: 100;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  color: var(--white-accent);
+  padding: 2.5rem;
+  width: 100%;
+  transition: 0.4s ease-in-out;
+}
+
+.grid-item:hover .overlay {
+  background: rgba(255, 255, 255, 0.5);
+}
+
+.grid-item:hover .figcaption {
+  color: black;
+}
+
+.desktop-img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.mobile-img {
+  display: none;
+}
+
+.footer-container {
+  background: var(--black-accent);
+  padding: 0 2rem;
+}
+
+.footer-wrapper {
+  max-width: 1440px;
+  margin: 0 auto;
+  width: 100%;
+  padding: 4rem 0;
+  display: flex;
+  justify-content: space-between;
+}
+
+.footer-logo {
+  cursor: pointer;
+}
+
+.footer-links {
+  display: flex;
+  gap: 2rem;
+  font-family: "Alata", sans-serif;
+  font-size: 1rem;
+  margin-top: 2rem;
+  cursor: pointer;
+}
+
+.social-links {
+  display: flex;
+  gap: 1.5rem;
+  cursor: pointer;
+}
+
+.copyright {
+  color: var(--dark-grey-accent);
+  font-family: "Alata", sans-serif;
+  margin-top: 2rem;
+  font-weight: 100;
+}
+
+.attribution {
+  color: var(--dark-grey-accent);
+  font-size: 1rem;
+  font-family: "Josefin Sans", sans-serif;
+  text-align: center;
+  padding: 0 0 2rem;
+}
+
+.attribution > a {
+  color: var(--white-accent);
+}
+
+.attribution > a:hover {
+  text-decoration: underline;
+}
+
+@media screen and (min-width: 601px) and (max-width: 1200px) {
+  .grid-list {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media (max-width: 800px) {
+  .hamburger-container {
+    display: block;
+  }
+
+  .hamburger {
+    position: absolute;
+    z-index: 2;
+    cursor: pointer;
+  }
+
+  .mobile-menu {
+    background: black;
+    position: fixed;
+    z-index: 1;
+    width: 100vw;
+    height: 100vh;
+    top: 0;
+    right: 0;
+    transform: translateX(100%);
+    display: flex;
+    align-items: center;
+    padding: 0 2rem;
+    transition: transform 0.5s ease-in-out;
+  }
+
+  .active {
+    transform: translateX(0);
+  }
+
+  .mobile-nav-links {
+    font-family: "Josefin Sans", sans-serif;
+    font-size: 4rem;
+    font-weight: 100;
+    color: var(--grey-accent);
+    cursor: pointer;
+    transition: 0.4s ease-in-out;
+  }
+
+  .mobile-nav-links:hover,
+  .mobile-nav-links:focus,
+  .mobile-nav-links:active {
+    color: var(--white-accent);
+  }
+
+  .nav-links {
+    display: none;
+  }
+
+  .grid-list {
+    grid-template-columns: repeat(1, 1fr);
+  }
+
+  .grid-container {
+    margin: 4rem 0 10rem;
+  }
+
+  .creations-container {
+    margin: 2rem auto;
+  }
+
+  .creations-wrapper {
+    justify-content: center;
+  }
+
+  .creations-title {
+    font-size: 2.6rem;
+  }
+
+  .btn {
+    display: none;
+  }
+
+  .mobile-btn-container {
+    display: flex;
+    justify-content: center;
+    margin: 4rem;
+  }
+
+  .mobile-btn {
+    display: block;
+    background: none;
+    border: 2px solid var(--black-accent);
+    text-transform: uppercase;
+    font-family: "Alata", sans-serif;
+    letter-spacing: 0.5rem;
+    font-weight: bold;
+    font-size: 1rem;
+    padding: 1rem 3rem;
+    transition: 0.4s ease-in-out;
+    cursor: pointer;
+    align-self: center;
+  }
+
+  .mobile-btn:hover,
+  .mobile-btn:active,
+  .mobile-btn:focus {
+    background: var(--black-accent);
+    color: var(--white-accent);
+  }
+
+  .desktop-img {
+    display: none;
+  }
+
+  .mobile-img {
+    display: block;
+    width: 100%;
+  }
+
+  .footer-wrapper,
+  .footer-links {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .social-links {
+    justify-content: center;
+    margin: 4rem 0 1rem;
+  }
 }
