--- a/css/styles.css
+++ b/css/styles.css
@@ -152,15 +152,14 @@ li {
   width: 50%;
   height: auto;
   max-width: 100%;
-  padding: 2rem 2rem 0;
-  /* padding: 6rem 6rem 0; */
+  padding: 6rem 6rem 0;
 }
 
 .article-title {
   font-family: "Josefin Sans", sans-serif;
   text-transform: uppercase;
   font-weight: 100;
-  font-size: clamp(1vw, 4vw, 4rem);
+  font-size: clamp(0.5vw, 3.5vw, 4rem);
   margin-bottom: 2rem;
 }
 
@@ -168,7 +167,7 @@ li {
   font-family: "Alata", sans-serif;
   color: var(--dark-grey-accent);
   line-height: 1.5;
-  font-size: clamp(1rem, 0.5vw, 2rem);
+  font-size: clamp(0.5vw, 1.2vw, 1rem);
 }
 
 .creations-container {
@@ -463,7 +462,7 @@ li {
   }
 
   .creations-container {
-    margin: 2rem auto;
+    margin: 10rem auto 2rem;
   }
 
   .creations-wrapper {
